<resources>
    <string name="app_name">KinoHelper</string>
    <string name="romance">Romance</string>
    <string name="history">History</string>
    <string name="step_1_choosing_movie_genres">Step 1: Choosing movie genres</string>
    <string name="choose_your_favorite_genres_no_more_than_three">Choose your favorite genres (up to 3)</string>
    <string name="horror">Horror</string>
    <string name="animation">Animation</string>
    <string name="family">Family</string>
    <string name="comedy">Comedy</string>
    <string name="fantasy">Fantasy</string>
    <string name="adventure">Adventure</string>
    <string name="drama">Drama</string>
    <string name="action">Action</string>
    <string name="thriller">Thriller</string>
    <string name="mystery">Mystery</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="documentary">Documentary</string>
    <string name="crime">Crime</string>
    <string name="i_m_18">I\'m 18 years old</string>
    <string name="previous">Back</string>
    <string name="step_2_movie_preferences">Step 2: Movie preferences</string>
    <string name="home">HOME</string>
    <string name="didn_t_watch">Didn\'t watch</string>
    <string name="next">Next</string>
    <string name="step_3_recommendations">Step 3: Recommendations</string>
    <string name="view_description">Read description</string>
    <string name="close">Close</string>
    <string name="description">The description for this movie is not available :(</string>
    <string name="Step1.Connection.link">https://api.themoviedb.org/3/genre/movie/list?api_key=ec7e318de0e8caf8d6d9c6bbac87ed0e&amp;language=en-US</string>
    <string name="Step2.Connection.link">https://api.themoviedb.org/3/discover/movie?api_key=ec7e318de0e8caf8d6d9c6bbac87ed0e&amp;language=en-US&amp;sort_by=popularity.desc&amp;include_adult=%1$s&amp;include_video=false&amp;page=%2$d&amp;with_genres=%3$d</string>
    <string name="Step2.AddFilm.link">https://api.themoviedb.org/3/movie/%1$d/similar?api_key=ec7e318de0e8caf8d6d9c6bbac87ed0e&amp;language=en-US&amp;page=1</string>
    <string name="Step2_3.poster_path">https://image.tmdb.org/t/p/original%1$s</string>
</resources>